Axel independizo maqueta y agrego imagen de dentista

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,11 @@ flutter:
     - assets/logo.png
     - assets/perfil-bottomLeft.png
     - assets/perfil-hombre.png
-    - assets/perfil-mujer.png
     - assets/perfil-hombre-cerca.png
+    - assets/perfil-mujer.png
     - assets/perfil-mujer-cerca.png
+    - assets/perfil-dentista.png
+    - assets/perfil-dentista-cerca.png
     - assets/footer/bottomRight.png
     - assets/footer/bottomLeft.png
     - assets/iconos/
