Axel agrego citas con base de datos, y pulio algunas pantallas

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
     - assets/flechas.png
     - assets/mejorsonrisa.png
     - assets/dentista-loading.png
-    - assets/dentistas-dibujo.png
+    - assets/nosotros-dibujo.png
     - assets/perfil-bottomLeft.png
     - assets/perfil-hombre.png
     - assets/perfil-hombre-cerca.png
