--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   http: ^0.12.2
   animate_do: ^1.7.5
+  time_machine: ^0.9.16
 
 dev_dependencies:
   flutter_test:
