--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
     - assets/nosotros-dibujo.png
     - assets/fondo-cita.png
     - assets/fondo-especialidades.png
-    - assets/clinica-dental.png
+    - assets/labios.jfif
     - assets/perfil-bottomLeft.png
     - assets/perfil-hombre.png
     - assets/perfil-hombre-cerca.png
