Axel agrego verificacion de clave en editar Perfil

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,12 @@ flutter:
     - assets/logo.png
     - assets/flechas.png
     - assets/mejorsonrisa.png
+    - assets/sonrisa_dental.png
     - assets/dentista-loading.png
     - assets/nosotros-dibujo.png
     - assets/fondo-cita.png
     - assets/fondo-loading.png
     - assets/fondo-especialidades.png
-    - assets/labios.jfif
     - assets/perfil-bottomLeft.png
     - assets/perfil-hombre.png
     - assets/perfil-hombre-cerca.png
