--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/fondo-cita.png
     - assets/fondo-loading.png
     - assets/fondo-especialidades.png
+    - assets/sonriamosJuntos.png
     - assets/perfil-bottomLeft.png
     - assets/perfil-hombre.png
     - assets/perfil-hombre-cerca.png
